--- a/reserveTime/core/templates/company-infos.html
+++ b/reserveTime/core/templates/company-infos.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/fontawesome.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/user-profile.css">
-    <link rel="stylesheet" href="css/company-profile.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/reset.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/user-profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/company-profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <title>Company List</title>
 
     <style>
@@ -30,13 +31,19 @@
     <header>
         <div class="container custom-container ">
             <div class="row justify-content-between">
-                <div class="left side">
-                    <img src="images/profile.png" width="60px" alt="Profile photo">
-                    <div class="d-flex flex-direction-column ml-2">
-                        <span class="mt-1">Welcome</span>
-                        <h5 class="bold">Ruhin Shukurlu</h5>
+                <a href="{% url 'account:company-update' user.pk %}">
+                    <div class="left side">
+                        {% if user.profile_img %}
+                        <img src="{{user.profile_img.url}}" width="60px" alt="Profile photo">
+                        {% else %}
+                        <img src="{% static 'images/profile.png' %}" width="60px" alt="Profile photo">
+                        {% endif %}
+                        <div class="d-flex flex-direction-column ml-2" style="color: wheat;">
+                            <span class="mt-1">Welcome</span>
+                            <h5 class="bold">{{user.first_name}} {{user.last_name}}</h5>
+                        </div>
                     </div>
-                </div>
+                </a>
                 <div class="right side">
                     <div class="notification">
                         <div class="d-flex">
@@ -61,94 +68,123 @@
         </div>
     </section>
     <main>
-        <div class="container mt-4   mb-3 company-admin-container main-container">
+        <div class="container mt-4 bg-white mb-3 company-admin-container main-container">
             <div class="row">
-                <h3 class="full bottom-border bold pb-3 mb-5">Company Informations</h3>
+                <h3 class="full bottom-border bold pb-3 mb-5">
+                    <a href="{% url 'account:company-profile' user.company.pk %}"><i class="fas fa-arrow-alt-circle-left"></i></a>
+                    Company Informations
+                </h3>
                 <p class="bold">These fields will help users to get basic informations about restaurant, that is why it is recomended to fill all fields correctly.</p>
-                <form action="" class="full mt-3 mb-3 company-infos-form">
+                <form method = "POST"  class="full mt-3 mb-3 company-infos-form">
+                    {% csrf_token %}
                    <div class="row">
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label for="formGroupExampleInput">Restaurant Name</label>
-                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Name">
+                                {{form.company_name}}
+                                {{form.company_name.errors}}
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label for="formGroupExampleInput">Phone Number</label>
-                                <input type='text' class="form-control" id="formGroupExampleInput" placeholder="Name">
+                                {{form.phone_number}}
+                                {{form.phone_number.errors}}
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label for="formGroupExampleInput">Restaurant Country</label>
-                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Name">
+                                {{form.country_location}}
+                                {{form.country_location.errors}}
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label for="formGroupExampleInput">Restaurant City</label>
-                                <input type='text' class="form-control" id="formGroupExampleInput" placeholder="Name">
+                                {{form.city_location}}
+                                {{form.city_location.errors}}
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label for="formGroupExampleInput">Restaurant State/Province</label>
-                                <input type='text' class="form-control" id="formGroupExampleInput" placeholder="Name">
+                                {{form.province_location}}
+                                {{form.province_location.errors}}
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <label for="formGroupExampleInput">Hours of operation</label>
-                                <input type='text' class="form-control" id="formGroupExampleInput" placeholder="Name">
+                                <label for="formGroupExampleInput">Work Start Hour</label>
+                                {{form.work_hours_from}}
+                                {{form.work_hours_from.errors}}
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <label for="formGroupExampleInput">Work Finish Hour</label>
+                                {{form.work_hours_to}}
+                                {{form.work_hours_to.errors}}
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label for="formGroupExampleInput">Cuisines</label>
-                                <input type='text' class="form-control" id="formGroupExampleInput" placeholder="Name">
+                                {{form.cuisines}}
+                                {{form.cuisines.errors}}
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label for="formGroupExampleInput">Dining Style</label>
-                                <input type='text' class="form-control" id="formGroupExampleInput" placeholder="Name">
+                                {{form.dining_style}}
+                                {{form.dining_style.errors}}
                             </div>
                         </div>
-                        <div class="col-lg-6">
-                            <div class="form-group">
-                                <label for="formGroupExampleInput">Parking details</label>
-                                <textarea name="" class="form-control" id="formGroupExampleInput" cols="30" rows="3" placeholder="Please, write short information about parking of your restaurant"></textarea>
-                            </div>
-                        </div>
-                        <div class="col-lg-6">
-                            <div class="form-group">
-                                <label for="formGroupExampleInput">Public transit</label>
-                                <textarea name="" class="form-control" id="formGroupExampleInput" cols="30" rows="3" placeholder="Please, write short information about Public Transit of your restaurant"></textarea>
-                            </div>
-                        </div>
+
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label for="formGroupExampleInput">Payment options</label>
-                                <input type='text' class="form-control" id="formGroupExampleInput" placeholder="Name">
+                                {{form.payment_options}}
+                                {{form.payment_options.errors}}
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label for="formGroupExampleInput">Executive chef</label>
-                                <input type='text' class="form-control" id="formGroupExampleInput" placeholder="Name">
+                                {{form.executive_chef}}
+                                {{form.executive_chef.errors}}
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label for="formGroupExampleInput">Website</label>
-                                <input type='url' class="form-control" id="formGroupExampleInput" placeholder="Name">
+                                {{form.website}}
+                                {{form.website.errors}}
+                            </div>
+                        </div>
+                        <div class="col-lg-12">
+                            <div class="form-group">
+                                <label for="formGroupExampleInput">Private party contact</label>
+                                {{form.private_party_contact}}
+                                {{form.private_party_contact.errors}}
+                            </div>
+                        </div>
+                        
+                   </div>
+                   <div class="row">
+                        <div class="col-lg-6">
+                            <div class="form-group">
+                                <label for="formGroupExampleInput">Parking details</label>
+                                {{form.parking_details}}
+                                {{form.parking_details.errors}}
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <label for="formGroupExampleInput">Private party contact</label>
-                                <input type='text' class="form-control" id="formGroupExampleInput" placeholder="Name">
+                                <label for="formGroupExampleInput">Public transit</label>
+                                {{form.public_transit}}
+                                {{form.public_transit.errors}}
                             </div>
                         </div>
                    </div>
@@ -156,23 +192,21 @@
                        <div class="col">
                             <div class="form-group">
                                 <label for="exampleFormControlTextarea1">Description</label>
-                                <textarea  placeholder="Write description ..." class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+                                {{form.description}}
+                                {{form.description.errors}}
                             </div>
                        </div>
                    </div>
-                    
-                    <input type="submit" value="Save" class="save-btn">
+                    <input type="submit" value="Save" class="save-btn float-r ">
                 </form>
-
-                
             </div>
         </div>
     </main>
 
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
     <script>
         $(document).ready(function(){
             $('.header-btn').click(function(){
