--- a/reserveTime/core/templates/company-tables.html
+++ b/reserveTime/core/templates/company-tables.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/fontawesome.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/user-profile.css">
-    <link rel="stylesheet" href="css/company-profile.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/reset.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/user-profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/company-profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <title>Company admin panel</title>
 
     <style>
@@ -30,13 +32,19 @@
     <header>
         <div class="container custom-container ">
             <div class="row justify-content-between">
-                <div class="left side">
-                    <img src="images/profile.png" width="60px" alt="Profile photo">
-                    <div class="d-flex flex-direction-column ml-2">
-                        <span class="mt-1">Welcome</span>
-                        <h5 class="bold">Ruhin Shukurlu</h5>
+                <a href="{% url 'account:company-update' user.pk %}">
+                    <div class="left side">
+                        {% if user.profile_img %}
+                        <img src="{{user.profile_img.url}}" width="60px" alt="Profile photo">
+                        {% else %}
+                        <img src="{% static 'images/profile.png' %}" width="60px" alt="Profile photo">
+                        {% endif %}
+                        <div class="d-flex flex-direction-column ml-2" style="color: wheat;">
+                            <span class="mt-1">Welcome</span>
+                            <h5 class="bold">{{user.first_name}} {{user.last_name}}</h5>
+                        </div>
                     </div>
-                </div>
+                </a>
                 <div class="right side">
                     <div class="notification">
                         <div class="d-flex">
@@ -56,14 +64,7 @@
         
     </header>
 
-    <!-- <section class="full">
-        <div class="row">
-            <a href="home-page.html" class="logo-link">
-                <img src="images/logo.png" width="350px" alt="">
-            </a>
-        </div>
-    </section> -->
-
+   
     
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -121,52 +122,55 @@
                 <h3 class="bottom-border full bold pb-3 mb-5">Company Tables</h3>
                 <div class="container">
                     <div class="row">
-                        <form action="" class="align-flex-end">
+                        <form method="POST" class="align-flex-end">
+                            {% csrf_token %}
                             <div class="form-group">
                                 <label for="exampleInputEmail1">Table size</label>
-                                <input type="number" class="form-control" id="exampleInputEmail1" placeholder="Enter size for each table">
+                                {{form.size}}
+                                {{form.size.errors}}
                             </div>
                             <div class="ml-3 form-group">
                                 <label for="exampleInputPassword1">How many?</label>
-                                <input type="number" class="form-control" id="exampleInputPassword1" placeholder="Enter amount">
+                                {{form.amount}}
+                                {{form.amount.errors}}
+                            </div>
+                             <div class="ml-3 form-group">
+                                <label for="exampleInputPassword1">Place</label>
+                                {{form.table_place}}
+                                {{form.table_place.errors}}
                             </div>
                             <div class="ml-3 form-group">
                                 <input type="submit" value="Create" class="btn btn-success">
                             </div>
                         </form>
                     </div>
+                    <h3 class="bottom-border full bold pb-3 mb-5">Inside Tables</h3>
                     <div class="row row-cols-4">
-                        <div class="col">
-                            <span data-toggle="modal" data-target="#exampleModal">7 person</span>
-                        </div>
-                        <div class="col">
-                            <span>7 person</span>
-                        </div>
-                        <div class="col"><span>5 person</span></div>
-                        <div class="col"><span>5 person</span></div>
-                        <div class="col"><span>5 person</span></div>
-                        <div class="col"><span>5 person</span></div>
-                        <div class="col"><span>5 person</span></div>
-
-                        <div class="col"><span>4 person</span></div>
-                        <div class="col"><span>4 person</span></div>
-                        <div class="col"><span>4 person</span></div>
-                        <div class="col"><span>4 person</span></div>
-
-                        <div class="col"><span>3 person</span></div>
-                        <div class="col"><span>3 person</span></div>
-                        <div class="col"><span>3 person</span></div>
+                        
+                        {% for table in inside_tables %}
+                            <div class="col">
+                                <span>{{table.size}} person</span>
+                            </div>
+                        {% endfor %}
                     </div>
-                    
+                    <h3 class="bottom-border full bold pb-3 mb-5">Outside Tables</h3>
+                    <div class="row row-cols-4">
+                        
+                        {% for table in outside_tables %}
+                            <div class="col">
+                                <span>{{table.size}} person</span>
+                            </div>
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
         </div>
     </main>
 
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
     <script>
         $(document).ready(function(){
             $('.header-btn').click(function(){
