--- a/reserveTime/static/css/reset.css
+++ b/reserveTime/static/css/reset.css
@@ -110,3 +110,8 @@ ol li{
     display: flex;
     align-items: flex-end;
 }
+
+.justify-flex-end {
+    display: flex;
+    justify-content: flex-end;
+}
