reserve times added to table

--- a/reserveTime/core/templates/company-menus.html
+++ b/reserveTime/core/templates/company-menus.html
@@ -106,8 +106,8 @@
                 <div class="row company-menu-block">
                   {% for category in menu_categories %}
                     
-                    <div class="menu-section pl-4 pr-4 mb-4 bottom-border">
-                        <div class="menu-section-header mb-4"><span>{{category.title}}</span></div>
+                    <div class="menu-section pl-4 pr-4 mb-4">
+                        <div class="menu-section-header mb-4 bottom-border"><span>{{category.title}}</span></div>
                         <div class="row menu-items">
                             {% for menu in menus %}
                                 {% if menu.menu_type == category %}
@@ -132,81 +132,7 @@
                        </div>
                     </div>
                   {% endfor %}
-                    <!-- <div class="menu-section pl-4 pr-4 mb-4 bottom-border">
-                        <div class="menu-section-header mb-4"><span>Appetizers</span></div>
-                        <div class="row menu-items">
-                            <div class="col-sm-6">
-                                <a href="menu-detail.html">
-                                    <div class="menu-item">
-                                        <div class="menu-item-header">
-                                            <div class="menu-title"><span>Baked Clams</span></div>
-                                            <div class="menu-price"><span>$23.95</span></div>
-                                        </div>
-                                        <div class="menu-description">
-                                            <p>Fresh Littleneck Clams Baked w/ Our Seasoned Breadcrumbs & Clam Broth</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="menu-item">
-                                    <div class="menu-item-header">
-                                        <div class="menu-title"><span>Baked Clams</span></div>
-                                        <div class="menu-price"><span>$23.95</span></div>
-                                    </div>
-                                    <div class="menu-description">
-                                        <p>Fresh Littleneck Clams Baked w/ Our Seasoned Breadcrumbs & Clam Broth</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="menu-item">
-                                    <div class="menu-item-header">
-                                        <div class="menu-title"><span>Baked Clams</span></div>
-                                        <div class="menu-price"><span>$23.95</span></div>
-                                    </div>
-                                    <div class="menu-description">
-                                        <p>Fresh Littleneck Clams Baked w/ Our Seasoned Breadcrumbs & Clam Broth</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="menu-item">
-                                    <div class="menu-item-header">
-                                        <div class="menu-title"><span>Baked Clams</span></div>
-                                        <div class="menu-price"><span>$23.95</span></div>
-                                    </div>
-                                    <div class="menu-description">
-                                        <p>Fresh Littleneck Clams Baked w/ Our Seasoned Breadcrumbs & Clam Broth</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="menu-item">
-                                    <div class="menu-item-header">
-                                        <div class="menu-title"><span>Baked Clams</span></div>
-                                        <div class="menu-price"><span>$23.95</span></div>
-                                    </div>
-                                    <div class="menu-description">
-                                        <p>Fresh Littleneck Clams Baked w/ Our Seasoned Breadcrumbs & Clam Broth</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="menu-item">
-                                    <div class="menu-item-header">
-                                        <div class="menu-title"><span>Baked Clams</span></div>
-                                        <div class="menu-price"><span>$23.95</span></div>
-                                    </div>
-                                    <div class="menu-description">
-                                        <p>Fresh Littleneck Clams Baked w/ Our Seasoned Breadcrumbs & Clam Broth</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>  
-                    </div> -->
                 </div>
-                
             </div>
         </div>
     </main>
