--- a/reserveTime/static/css/style.css
+++ b/reserveTime/static/css/style.css
@@ -475,6 +475,17 @@ footer{
     font-weight: bold;
  }
 
+ .company-menu-block a{
+    display: block;
+ }
+ .company-menu-block{
+     width: 100%;
+ }
+
+ .menu-section{
+    width: 100%;
+ }
+
  .company-menu-block .menu-item,
  .reservation-detail-block .menu-item{
     border: 1px solid #ccc;
@@ -536,7 +547,8 @@ box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
     display: flex;
  }
 
- .table-container .col span{
+ .table-span{
+    position: relative;
     width: 150px;
     height: 100px;
     background-color: #117A65 ;
@@ -544,6 +556,12 @@ box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
     border-radius: 5px;
     margin: 5px;
     font-weight: bold;
+ }
+
+ .icon-box{
+    position: absolute;
+    top: 0;
+    right: 0;
     cursor: pointer;
  }
 
@@ -554,4 +572,21 @@ box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
 
  .modal-dialog{
      margin-top: 250px;
+ }
+
+ .pop-up-block{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 10;
+ }
+
+ .pop-up-box{
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
  }
